--- a/Movie review/Base.lproj/Main.storyboard
+++ b/Movie review/Base.lproj/Main.storyboard
@@ -17,56 +17,48 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="118" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="eZ4-IG-oed">
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="ri7-qY-t7P">
                                 <rect key="frame" x="0.0" y="28" width="375" height="590"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="boxCell" rowHeight="118" id="swE-BU-eCx" customClass="boxCell" customModule="Movie_review" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="118"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="swE-BU-eCx" id="dtf-bc-nUn">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="117"/>
+                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="PnA-X9-yGt">
+                                    <size key="itemSize" width="182" height="245"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CollectionCell" id="a1n-7c-XfF" customClass="CollectionCell" customModule="Movie_review" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="182" height="245"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="182" height="245"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="E0d-em-h8p">
-                                                    <rect key="frame" x="0.0" y="-5" width="105" height="128"/>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oSX-DZ-I6R">
+                                                    <rect key="frame" x="0.0" y="0.0" width="182" height="208"/>
                                                 </imageView>
-                                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="scaleToFill" fixedFrame="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="S2D-Dl-Ie1">
-                                                    <rect key="frame" x="105" y="24" width="270" height="99"/>
-                                                    <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                                    <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
-                                                    <color key="textColor" red="0.8862745098" green="0.61960784310000006" blue="0.062745098040000002" alpha="1" colorSpace="calibratedRGB"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                                                </textView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kwE-2v-6NH">
-                                                    <rect key="frame" x="105" y="-5" width="270" height="34"/>
-                                                    <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
-                                                    <color key="textColor" red="0.85490196078431369" green="0.55294117647058827" blue="0.058823529411764705" alpha="1" colorSpace="calibratedRGB"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CE1-hg-bko">
+                                                    <rect key="frame" x="11" y="216" width="163" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.85490196080000003" green="0.55294117649999996" blue="0.058823529409999999" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
-                                        </tableViewCellContentView>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </view>
                                         <connections>
-                                            <outlet property="image1" destination="E0d-em-h8p" id="3ow-lN-m6p"/>
-                                            <outlet property="label1" destination="kwE-2v-6NH" id="ysJ-aD-LrT"/>
-                                            <outlet property="textView1" destination="S2D-Dl-Ie1" id="zyJ-fO-ndk"/>
+                                            <outlet property="labelTitle" destination="CE1-hg-bko" id="Xdv-AK-6y7"/>
+                                            <outlet property="movieImage" destination="oSX-DZ-I6R" id="YQq-2f-F84"/>
                                         </connections>
-                                    </tableViewCell>
-                                </prototypes>
-                                <connections>
-                                    <outlet property="dataSource" destination="urh-MY-5xH" id="Nzm-il-8hc"/>
-                                    <outlet property="delegate" destination="urh-MY-5xH" id="UCB-Do-0xt"/>
-                                </connections>
-                            </tableView>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Top Rated" image="DVD_logo" id="kYW-GP-E8O"/>
                     <connections>
-                        <outlet property="TableView" destination="eZ4-IG-oed" id="rSY-Je-WwE"/>
-                        <segue destination="pO0-m8-8c8" kind="show" identifier="toTopDetail" id="c2W-gM-E4M"/>
+                        <outlet property="boxView" destination="ri7-qY-t7P" id="hOi-Wq-Tgg"/>
                         <segue destination="n6C-Ha-WQd" kind="show" identifier="ShowDetail" id="AcV-xh-0Re"/>
                     </connections>
                 </viewController>
@@ -382,7 +374,7 @@
                 </searchDisplayController>
                 <tapGestureRecognizer id="aHW-t1-EoJ"/>
             </objects>
-            <point key="canvasLocation" x="-116.5" y="-536.5"/>
+            <point key="canvasLocation" x="-171.5" y="-532.5"/>
         </scene>
         <!--Detial View Controller-->
         <scene sceneID="UUc-Sf-JEi">
@@ -452,7 +444,7 @@
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
-                        <outlet property="DetailImage" destination="aR7-4C-AhC" id="kYa-Iu-M55"/>
+                        <outlet property="DetailImage" destination="aR7-4C-AhC" id="uOv-z6-Ke7"/>
                         <outlet property="detailedLabel" destination="2MY-X1-RbM" id="bvd-4G-Mu7"/>
                         <outlet property="movieTitle" destination="maS-iJ-TXh" id="Drq-fe-H5m"/>
                         <outlet property="scrollViewOutput" destination="zCg-Pc-VIb" id="56q-z6-5ua"/>
@@ -471,8 +463,8 @@
         <image name="search_filled" width="25" height="25"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="ou0-ii-080"/>
+        <segue reference="Wzj-EM-eWa"/>
+        <segue reference="AcV-xh-0Re"/>
         <segue reference="4Bm-cI-Y1w"/>
-        <segue reference="tpg-hX-w6g"/>
     </inferredMetricsTieBreakers>
 </document>
